<resources>
    <string name="app_name">GB Version For whatsapp</string>

    <string name="Panjabi">Panjabi</string>
    <string name="Panjabi1">ਪੰਜਾਬੀ</string>
    <string name="all_status_download">All Status Download</string>
    <string name="allow_storage_access">Allow storage access</string>
    <string name="app_version">App Version</string>
    <string name="art_pic">Art Pic</string>
    <string name="auto_focused">Auto focused</string>
    <string name="autofocus_off">Autofocus is deactivated</string>
    <string name="autofocus_on">Autofocus is activated</string>
    <string name="camera">Camera</string>
    <string name="captions">Captions</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="confirm">Confirm Delete....</string>
    <string name="copied">Copy to Clipboard.</string>
    <string name="copied_text">copied_text</string>
    <string name="copy">Copy</string>
    <string name="d_chat">Direct Chat</string>
    <string name="default_web_client_id">670924272736-evhbbfidm2ftndgteab75a2pnqbbhpa9.apps.googleusercontent.com</string>
    <string name="del_status">Are you sure, You Want To Delete This Status?</string>
    <string name="delete">Delete</string>
    <string name="delete_alert">Are you sure , You want to delete selected files?</string>
    <string name="delete_error">Couldn\'t delete some files</string>
    <string name="delete_recovery">Delete Recovery</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="directory_in">directory in SD card.</string>
    <string name="documents">Documents</string>
    <string name="download">Download</string>
    <string name="downloaded_status">Downloaded Status</string>
    <string name="emotions">Emotion Text</string>
    <string name="english">English</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_your_message">Enter Your Message</string>
    <string name="enter_your_text_here">Enter Your Text Here</string>
    <string name="err_wtsapp_not_installed">WhatsApp have not been installed.</string>
    <string name="fancy_chat_style">Fancy Chat Style</string>
    <string name="firebase_database_url">https://whats-scan-2659e.firebaseio.com</string>
    <string name="flashlight">Flashlight</string>
    <string name="gcm_defaultSenderId">670924272736</string>
    <string name="google_api_key">AIzaSyC-SEeQwMCLng-9SjmxXDaXhJSr7HpSTFE</string>
    <string name="google_app_id">1:670924272736:android:e3f707341002936308bf05</string>
    <string name="google_crash_reporting_api_key">AIzaSyC-SEeQwMCLng-9SjmxXDaXhJSr7HpSTFE</string>
    <string name="google_storage_bucket">gbwhatsapp-7fe5f.appspot.com</string>
    <string name="gujarati">Gujarati</string>
    <string name="gujarati1">ગુજરાતી</string>
    <string name="hindi">Hindi</string>
    <string name="hindi1">हिन्दी</string>
    <string name="home">Home</string>
    <string name="images">Images</string>
    <string name="introInfo">Thanks for installing!10 Just connect your phone as you would on your computer.10To unlock the keyboard, use the keyboard button top right. Your settings will be saved.</string>
    <string name="lbl_image_saved_to_gallery">Image saved to gallery.</string>
    <string name="lbl_problem_to_save_status">There was a Problem in Saving this Status :(</string>
    <string name="lbl_video_saved_to_gallery">Video saved to gallery.</string>
    <string name="let_s_open_whatsapp">Whatsapp Saver</string>
    <string name="marathi">Marathi</string>
    <string name="marathi1">मराठी</string>
    <string name="menu_generate">Generate QR-CB</string>
    <string name="menu_history">History</string>
    <string name="menu_scan">Scan</string>
    <string name="mirror_text">Mirror Text</string>
    <string name="more_apps">More Apps(ad)</string>
    <string name="name_text">Name Text</string>
    <string name="no">No</string>
    <string name="no_document_found">No Document Found!!</string>
    <string name="no_downloaded_found">No Downloaded Found</string>
    <string name="no_history">No History Found!!</string>
    <string name="no_message_found">No Message Found!!</string>
    <string name="no_text_to_copy">No text found to copy</string>
    <string name="no_text_to_share">No text found to share</string>
    <string name="numeric">Numeric Value</string>
    <string name="permission_not_granted">Permission not granted!</string>
    <string name="preparing">Preparing...</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate">Rate</string>
    <string name="rate_us">Rate Us</string>
    <string name="repost">Repost</string>
    <string name="result">Result</string>
    <string name="save">Save</string>
    <string name="save_error">Couldn\'t save some files</string>
    <string name="save_success">All Status Are Saved Successfully</string>
    <string name="saved_success">Status saved successfully</string>
    <string name="saved_to">Saved to:</string>
    <string name="saving">Saving...</string>
    <string name="select_all">Select All</string>
    <string name="select_country">Select Country</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_app">Share App</string>
    <string name="share_title">Share using</string>
    <string name="status_not_available">Status not available.</string>
    <string name="stylist_arts">Stylist Arts</string>
    <string name="stylist_emojis">Stylist Emojis</string>
    <string name="stylist_name">Stylish Name</string>
    <string name="stylist_number">Stylish Number</string>
    <string name="stylist_text">Stylish Text</string>
    <string name="tamil">Tamil</string>
    <string name="tamil1">தமிழ்</string>
    <string name="telugu">Telugu</string>
    <string name="telugu1">తెలుగు</string>
    <string name="text_copied">Text copied to clipboard</string>
    <string name="text_here">Enter Your Text Here</string>
    <string name="type_here_bar">Insert to generate Codebar</string>
    <string name="type_here_qr">Insert to generate QR</string>
    <string name="urdu">Urdu</string>
    <string name="urdu1">اردو</string>
    <string name="video">Videos</string>
    <string name="wa_tools">WA Tools</string>
    <string name="wapp">WhatsApp</string>
    <string name="wapp_permission">Click on this button and Allow permission to access your status</string>
    <string name="wbapp">WA Business</string>
    <string name="whatsapp_status">Whatsapp Status</string>
    <string name="whatsapp_tools">Whatsapp Tools</string>
    <string name="yes">Yes</string>
    <string name="web_scanner">Web Scanner</string>
    <string name="direct_message">Direct Message</string>
    <string name="qr_code">QR Code</string>
    <string name="no_images_found">No Image Found</string>
    <string name="videos">Videos</string>
    <string name="photos">Photos</string>
    <string name="search_profile">Search Profile</string>
    <string name="search_profile_using">Search Profile Using</string>
    <string name="alert_enter_whats_app_number">Please enter receiver\'s whats app number</string>
    <string name="alert_install_whats_app_buisness">Please install whatsapp Business</string>
    <string name="alert_install_whats_app">Please install whatsapp</string>
    <string name="select_wa_type">Please select any one whatsapp</string>
    <string name="hint_enter_message_here">Enter Message Here</string>
    <string name="hint_enter_name_for_identity">Enter name for identity</string>
    <string name="please_install_file_manager">Please install file manage</string>
    <string name="chat">Chat</string>
    <string name="cleaner_for_whatsapp">Cleaner For Whatsapp</string>
    <string name="scanning_files">Scanning Files</string>
    <string name="please_wait_until_scan_complete">Please wait until scan complete</string>
    <string name="it_may_take_long_time_depending_on_wa_data">It may take long time, depending on WA Data</string>
    <string name="whats_app_not_installed_in_phone_desc">You don\'t have Whats App or Business Whats App on your phone.</string>
    <string name="install_whats_app">Install WhatsApp</string>


</resources>