<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/actionLay">

        <GridView
            android:id="@+id/WorkImageGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_11sdp"
            android:gravity="center"
            android:horizontalSpacing="@dimen/_5sdp"
            android:numColumns="3"
            android:stretchMode="columnWidth"
            android:verticalSpacing="@dimen/_7sdp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/sAccessBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/wapp_permission"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_55sdp"
            android:background="@drawable/unpress_tab"
            android:gravity="center"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/allow_storage_access"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_38sdp"
            android:background="@drawable/btm_btn"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_4sdp">

            <CheckBox
                android:id="@+id/selectAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_all"
                android:textColor="@color/btn_text"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/downloadIV"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_38sdp"
            android:background="@drawable/btm_btn"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_4sdp">

            <ImageView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:src="@drawable/ic_save"
                app:tint="@color/btn_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/save"
                android:textColor="@color/btn_text"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deleteIV"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_38sdp"
            android:background="@drawable/btm_btn"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_4sdp">

            <ImageView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:src="@drawable/ic_delete"
                app:tint="@color/btn_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/delete"
                android:textColor="@color/btn_text"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/loader_lay" />

    <include layout="@layout/empty_lay" />
</RelativeLayout>
