<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_15sdp"
            android:src="@drawable/back"
            android:tint="@color/white"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/d_chat"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header">

        <FrameLayout
            android:id="@+id/ad_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/txtLay"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/ad_view_container"
            android:layout_margin="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_defaultNameCode="IN"
                app:ccp_textColor="@color/black"
                app:ccp_textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/phone_number_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/btn_bg"
                android:hint="@string/enter_mobile_number"
                android:inputType="phone"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_medium"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>

        <EditText
            android:id="@+id/msg_edt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_below="@+id/txtLay"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:hint="@string/enter_your_message"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/msg_edt">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_15sdp">

                <LinearLayout
                    android:id="@+id/wapp"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@drawable/btn_bg_s"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="@dimen/_13sdp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
