<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03051A">

    <LinearLayout
        android:id="@+id/relativeHeader"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/cleaner_for_whatsapp"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fLayout"
        android:layout_below="@+id/relativeHeader"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/_6sdp"
                    android:paddingRight="@dimen/_6sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/linearProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminateTint="@color/white" />

                    <TextView
                        android:id="@+id/tvTotalScannedFiles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_14sdp"
                        android:text="@string/scanning_files"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/please_wait_until_scan_complete"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/it_may_take_long_time_depending_on_wa_data"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/relativeNoWa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fLayout"
        android:layout_below="@+id/relativeHeader"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/whats_app_not_installed_in_phone_desc"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardBackgroundColor="#00514a"
            app:cardCornerRadius="@dimen/_17sdp">

            <LinearLayout
                android:id="@+id/linearInstallWA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_6sdp"
                android:paddingRight="@dimen/_20sdp"
                android:paddingBottom="@dimen/_6sdp">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:src="@drawable/ic_wa" />

                <TextView
                    android:id="@+id/tvInstallWA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/install_whats_app"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            app:cardBackgroundColor="#00514a"
            app:cardCornerRadius="@dimen/_17sdp">

            <LinearLayout
                android:id="@+id/linearInstallBusinessWA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_6sdp"
                android:paddingRight="@dimen/_20sdp"
                android:paddingBottom="@dimen/_6sdp">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:src="@drawable/ic_wa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="Install Business Whats App"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fLayout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <FrameLayout
            android:id="@+id/native_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_gravity="center" />

    </FrameLayout>

</RelativeLayout>
