<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ToolbarStyle">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/downloaded_status"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mmm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_main">

        <ImageView
            android:id="@+id/iv_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/llController"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/ivShare"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:background="@drawable/btn_bg"
                android:foreground="@drawable/ripple"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_share_24" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="7dp"
                    android:layout_toEndOf="@+id/img_share"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ivRepost"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:background="@drawable/btn_bg"
                android:foreground="@drawable/ripple"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_repost"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/w_icon" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="7dp"
                    android:layout_toEndOf="@+id/img_repost"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/repost"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
